<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mahi.homework5.GameDetails">

    <TextView
        android:text="@string/empty_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/game_title" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/screen_background_light_transparent"
        android:layout_below="@+id/game_title"
        android:layout_toEndOf="@+id/game_title"
        android:layout_marginTop="24dp"
        android:id="@+id/game_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finish_button"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false" />

    <Button
        android:text="@string/similar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/finish_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/similar_button"
        android:textAllCaps="false" />

    <Button
        android:text="@string/trailer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trailer_button"
        android:layout_above="@+id/similar_button"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/genre_label"
        android:layout_below="@+id/overview_label">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:text="@string/empty_string"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/overview_text"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/overview_label" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_image"
        android:id="@+id/game_load"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/trailer_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/publisher_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/publisher_label"
        android:layout_above="@+id/trailer_button" />

    <TextView
        android:text="@string/empty_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/publisher_text"
        android:layout_above="@+id/trailer_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/publisher_label"
        android:layout_toEndOf="@+id/publisher_label" />

    <TextView
        android:text="@string/genre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_label"
        android:layout_above="@+id/publisher_label" />

    <TextView
        android:text="@string/empty_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_text"
        android:layout_above="@+id/publisher_label"
        android:layout_alignRight="@+id/publisher_text"
        android:layout_alignEnd="@+id/publisher_text"
        android:layout_toEndOf="@+id/genre_label"
        android:layout_toRightOf="@+id/genre_label" />

    <TextView
        android:text="@string/overview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overview_label"
        android:layout_below="@+id/game_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
